--- a/src/components/my-tabs/my-tab.css
+++ b/src/components/my-tabs/my-tab.css
@@ -1,7 +1,9 @@
 .my-tab {
   padding: 12px 16px;
   cursor: pointer;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 .my-tab.active {
   color: #1890ff;
   font-weight: 500;
